--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="light_purple">#EAE8FF</color>
+    <color name="dark_blue">#2D3142</color>
+    <color name="light_blue">#B0D7FF</color>
 </resources>
