--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,45 +22,54 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.247" />
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical">
-
-
-    <Button
-        android:id="@+id/play_button"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="659dp"
+        android:layout_marginTop="140dp"
         android:gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/play"
-         />
-    <Button
-        android:id="@+id/pause_button"
-        android:gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/pause"
-        />
-
-    <Button
-        android:id="@+id/accelerometerButtonId"
-        android:layout_width="160sp"
-        android:layout_height="70sp"
-        android:gravity="center"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:backgroundTint="#EDE7F6"
-        android:text="@string/accelerometerButton"
-        android:textColor="#9575CD"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.54"
-        app:layout_constraintStart_toStartOf="parent"
+        android:orientation="vertical"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.357" />
+        tools:layout_editor_absoluteX="0dp">
+
+
+        <Button
+            android:id="@+id/start_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Start" />
+
+        <Button
+            android:id="@+id/play_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Play" />
+
+        <Button
+            android:id="@+id/pause_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/pause" />
+
+        <Button
+            android:id="@+id/accelerometerButtonId"
+            android:layout_width="160sp"
+            android:layout_height="70sp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:backgroundTint="#EDE7F6"
+            android:gravity="center"
+            android:text="@string/accelerometerButton"
+            android:textColor="#9575CD"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.54"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.357" />
 
     </LinearLayout>
 
