--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,49 +7,57 @@
     tools:context=".MainActivity"
     android:background="@color/dark_blue">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="@string/beat_match"
-        android:padding="30dp"
-        android:textSize="30dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.247" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="659dp"
+        android:layout_height="match_parent"
         android:layout_marginTop="140dp"
         android:gravity="center"
         android:orientation="vertical"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="0dp">
 
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="-150dp"
+            android:gravity="center"
+            android:text="@string/beat_match"
+            android:padding="30dp"
+            android:textSize="30dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.247" />
+
 
         <Button
             android:id="@+id/start_button"
-            android:layout_width="wrap_content"
+            android:layout_width="160sp"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
             android:gravity="center"
+            android:background="#404040"
             android:text="Start" />
 
         <Button
             android:id="@+id/play_button"
-            android:layout_width="wrap_content"
+            android:layout_width="160sp"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:background="#404040"
             android:gravity="center"
             android:text="Play" />
 
         <Button
             android:id="@+id/pause_button"
-            android:layout_width="wrap_content"
+            android:layout_width="160sp"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:background="#404040"
             android:gravity="center"
             android:text="@string/pause" />
 
