--- a/app/src/main/res/layout/activity_accelerometer_sensor.xml
+++ b/app/src/main/res/layout/activity_accelerometer_sensor.xml
@@ -51,11 +51,60 @@ tools:context="com.example.beatmatch.AccelerometerSensor">
     android:layout_height="wrap_content"
     android:textColor="#EDE7F6"
     android:textAlignment="center"
-    android:layout_marginTop="49dp"
+    android:layout_marginTop="46dp"
     android:id="@+id/zValueId"
     android:textSize="18sp"
     android:layout_below="@+id/yValueId"
     android:layout_centerHorizontal="true"/>
+
+<TextView
+    android:text="@string/zValueText"
+    android:layout_width="250sp"
+    android:layout_height="wrap_content"
+    android:textColor="#EDE7F6"
+    android:textAlignment="center"
+    android:layout_marginTop="49dp"
+    android:id="@+id/timeValueId"
+    android:textSize="18sp"
+    android:layout_below="@+id/zValueId"
+    android:layout_centerHorizontal="true"/>
+
+<TextView
+    android:text="@string/zValueText"
+    android:layout_width="250sp"
+    android:layout_height="wrap_content"
+    android:textColor="#EDE7F6"
+    android:textAlignment="center"
+    android:layout_marginTop="52dp"
+    android:id="@+id/LastStepValueId"
+    android:textSize="18sp"
+    android:layout_below="@+id/timeValueId"
+    android:layout_centerHorizontal="true"/>
+
+<TextView
+    android:text="@string/zValueText"
+    android:layout_width="250sp"
+    android:layout_height="wrap_content"
+    android:textColor="#EDE7F6"
+    android:textAlignment="center"
+    android:layout_marginTop="55dp"
+    android:id="@+id/TempoValueId"
+    android:textSize="18sp"
+    android:layout_below="@+id/LastStepValueId"
+    android:layout_centerHorizontal="true"/>
+
+<TextView
+    android:text="@string/zValueText"
+    android:layout_width="250sp"
+    android:layout_height="wrap_content"
+    android:textColor="#EDE7F6"
+    android:textAlignment="center"
+    android:layout_marginTop="58dp"
+    android:id="@+id/LoopTimeValueId"
+    android:textSize="18sp"
+    android:layout_below="@+id/TempoValueId"
+    android:layout_centerHorizontal="true"/>
+
 
     <!--<LinearLayout-->
         <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
